this is getting better

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           <div class="col-lg-5" data-aos="zoom-out">
             <div class="visual-content">
               <div class="fluid-shape">
-                            <img src="https://cdn.pixabay.com/animation/2024/02/22/07/04/07-04-49-688_512.gif" alt="Digital Solutions" class="img-fluid rounded-4">
+                            <img src="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExNG5kdjc1em9manRyZ21iN3lpcDg2Y2J6OWliejNhNHZyeGc5bDBraiZlcD12MV9naWZzX3NlYXJjaCZjdD1n/3o85xCVo1diTHyIoPC/giphy.webp" alt="Digital Solutions" width="450px"   class="img-fluid rounded-4">
 
               </div>
             </div>
@@ -112,7 +112,7 @@
         <div class="row gx-5 align-items-center">
           <div class="col-lg-6" data-aos="fade-right" data-aos-delay="200">
             <div class="about-image position-relative">
-              <img src="https://images.unsplash.com/photo-1510074377623-8cf13fb86c08?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTl8fHNvZnR3YXJlJTIwY29tcGFueXxlbnwwfHwwfHx8MA%3D%3D" class="img-fluid rounded-4 shadow-sm" alt="About Image" loading="lazy">
+              <img src="https://media.istockphoto.com/id/1261597991/photo/about-us-presentation-service-delivery-and-positive-feedback-concept-black-painted-wood-and.webp?a=1&b=1&s=612x612&w=0&k=20&c=31zrwOrjmVUXEJ5zifWwZCAAZDNUzfNA2pRToWJ7tCg=" class="img-fluid rounded-4 shadow-sm" alt="About Image" loading="lazy">
               <!-- <div class="experience-badge">
                 <span class="years">10+</span>
                 <span class="text">Years of Expertise</span>
@@ -462,7 +462,7 @@
           </div>
 
           <div class="content-right position-relative" data-aos="fade-left" data-aos-delay="300">
-                <img src="https://img.freepik.com/free-photo/programming-background-collage_23-2149901789.jpg?uid=R183252386&ga=GA1.1.1460913344.1747603468&semt=ais_hybrid&w=740" alt="Digital Solutions" class="fluid-img">
+                <img src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OHx8YW5hbHlzaXN8ZW58MHx8MHx8fDA%3D" alt="Digital Solutions" class="fluid-img ">
             <div class="floating-card">
               <!-- <div class="card-icon">
                 <i class="bi bi-graph-up-arrow"></i>
