--- a/web.html
+++ b/web.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Web</title>
+  <title>Get Started - Strategy Bootstrap Template</title>
   <meta name="description" content="Start your journey with us by filling out our get started form.">
   <meta name="keywords" content="get started, strategy, bootstrap template">
 
   <!-- Favicons -->
-  <link href="assets/img/dtcpak logo.png" rel="icon">
+  <link href="assets/img/favicon.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Fonts -->
@@ -26,7 +26,6 @@
 
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
-  <link rel="stylesheet" href="assets/css/web.css">
 
   <!-- =======================================================
   * Template Name: Strategy
@@ -39,205 +38,134 @@
 
 <body class="get-started-page">
 
-    <header id="header" class="header d-flex align-items-center fixed-top">
-    <div class="header-container container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
-
+  <header id="header" class="header d-flex align-items-center fixed-top">
+    <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
       <a href="index.html" class="logo d-flex align-items-center me-auto me-xl-0">
-        <!-- Uncomment the line below if you also wish to use an image logo -->
-        <!-- <img src="assets/img/logo.webp" alt=""> -->
-<img src="assets/img/dtcpak logo.png" alt="Your Software House Logo" class="img-fluid" style="max-height: 70px; width: auto;">      </a>
+        <img src="assets/img/dtcpak logo.png" alt="Digital Transformation Company Pakistan Logo" class="img-fluid" style="max-height: 70px; width: auto;">
+      </a>
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="#hero" class="active">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="service-details.html">Services</a></li>
           <li><a href="portfolio-details.html">Portfolio</a></li>
-          <!-- <li><a href="#team">Team</a></li> -->
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="#team">Team</a></li>
+          <li><a href="contact-us.html">Contact</a></li>
+          <li><a href="privacy-policy.html">Privacy Policy</a></li>
+          <li><a href="terms-and-conditions.html">Terms and Conditions</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
-      <a class="btn-getstarted" href="get-started.html">Get Started</a>
-
+      <a class="btn-getstarted active" href="get-started.html">Get Started</a>
     </div>
   </header>
 
   <main class="main">
-    <div class="tab-pane fade" id="service-tab-3" role="tabpanel" aria-labelledby="web-development-tab">
-      <section class="service-hero py-5 bg-light text-center">
-        <div class="container">
-          <h1 class="display-5 fw-bold mb-3">Web Development Services</h1>
-          <p class="lead mb-4">Transform your business with high-performance, scalable, and visually stunning websites. Our expert developers build custom solutions that deliver seamless user experiences and drive results.</p>
-          <div class="row justify-content-center mb-4">
-            <div class="col-lg-8">
-              <p>We create websites that are not only beautiful but also functional and optimized for performance. Our process covers everything from planning and design to development, testing, and launch. Whether you need a simple landing page or a complex web application, we deliver solutions that grow with your business.</p>
-              <ul class="text-start mx-auto" style="max-width: 600px;">
-                <li><b>Responsive Websites:</b> Your site will look and work perfectly on every device.</li>
-                <li><b>E-Commerce Solutions:</b> Sell online with secure, scalable, and user-friendly stores.</li>
-                <li><b>Web Applications:</b> Custom apps tailored to your unique business needs.</li>
-                <li><b>Maintenance & Support:</b> Ongoing care to keep your site secure, fast, and up-to-date.</li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </section>
-      <section class="packages-section py-5">
-        <div class="container">
-          <h2 class="text-center mb-5">Web Development Packages</h2>
-          <div class="row g-4 justify-content-center">
-            <!-- Basic Package -->
-            <div class="col-md-4">
-              <div class="card h-100 shadow package-card border-primary">
-                <div class="card-body text-center">
-                  <h3 class="card-title">Basic</h3>
-                  <h4 class="card-price text-primary mb-3">$499<span class="fs-6">/project</span></h4>
-                  <ul class="list-unstyled mb-4">
-                    <li><i class="bi bi-check-circle text-success"></i> 1-3 Pages Website</li>
-                    <li><i class="bi bi-check-circle text-success"></i> Mobile Responsive</li>
-                    <li><i class="bi bi-check-circle text-success"></i> Basic SEO Setup</li>
-                  </ul>
-                  <a href="contact.html" class="btn btn-primary">Get Started</a>
-                </div>
-              </div>
-            </div>
-            <!-- Standard Package -->
-            <div class="col-md-4">
-              <div class="card h-100 shadow package-card border-success">
-                <div class="card-body text-center">
-                  <h3 class="card-title">Standard</h3>
-                  <h4 class="card-price text-success mb-3">$999<span class="fs-6">/project</span></h4>
-                  <ul class="list-unstyled mb-4">
-                    <li><i class="bi bi-check-circle text-success"></i> Up to 10 Pages</li>
-                    <li><i class="bi bi-check-circle text-success"></i> Contact Form</li>
-                    <li><i class="bi bi-check-circle text-success"></i> Blog Integration</li>
-                    <li><i class="bi bi-check-circle text-success"></i> Enhanced SEO</li>
-                  </ul>
-                  <a href="contact.html" class="btn btn-success">Get Started</a>
-                </div>
-              </div>
-            </div>
-            <!-- Premium Package -->
-            <div class="col-md-4">
-              <div class="card h-100 shadow package-card border-warning">
-                <div class="card-body text-center">
-                  <h3 class="card-title">Premium</h3>
-                  <h4 class="card-price text-warning mb-3">$1999<span class="fs-6">/project</span></h4>
-                  <ul class="list-unstyled mb-4">
-                    <li><i class="bi bi-check-circle text-success"></i> Unlimited Pages</li>
-                    <li><i class="bi bi-check-circle text-success"></i> E-Commerce Functionality</li>
-                    <li><i class="bi bi-check-circle text-success"></i> Custom Integrations</li>
-                    <li><i class="bi bi-check-circle text-success"></i> Priority Support</li>
-                  </ul>
-                  <a href="contact.html" class="btn btn-warning text-white">Get Started</a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-      <div class="process-timeline mt-4">
-        <div class="timeline-item">
-          <div class="timeline-marker">01</div>
-          <div class="timeline-content">
-            <h4>Planning & Design</h4>
-            <p>Outline structure and create wireframes.</p>
-          </div>
-        </div>
-        <div class="timeline-item">
-          <div class="timeline-marker">02</div>
-          <div class="timeline-content">
-            <h4>Development</h4>
-            <p>Code and integrate features with modern technologies.</p>
-          </div>
-        </div>
-        <div class="timeline-item">
-          <div class="timeline-marker">03</div>
-          <div class="timeline-content">
-            <h4>Testing & Launch</h4>
-            <p>Ensure quality and deploy the site live.</p>
-          </div>
-        </div>
-      </div>
-      <div class="benefits mt-4">
-        <h4>Benefits</h4>
-        <ul>
-          <li>Responsive design</li>
-          <li>Improved site performance</li>
-          <li>Scalable solutions</li>
-        </ul>
-      </div>
-    </div>
+ <!-- Web Development -->
+                  <div class="tab-pane fade" id="service-tab-3" role="tabpanel" aria-labelledby="web-development-tab">
+                    <div class="row">
+                      <div class="col-md-6">
+                        <div class="content-block">
+                          <h3>Innovative Web Development</h3>
+                          <p>Build responsive, high-performance websites with our cutting-edge development services.</p>
+                          <p>We ensure seamless user experiences and robust functionality.</p>
+                        </div>
+                      </div>
+                      <div class="col-md-6">
+                        <img src="https://images.unsplash.com/photo-1571171637578-41bc2dd41cd2?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTF8fHdlYiUyMGRldmVsb3BtZW50fGVufDB8fDB8fHww" alt="Web Development" class="img-fluid rounded">
+                      </div>
+                    </div>
+                    <div class="process-timeline mt-4">
+                      <div class="timeline-item">
+                        <div class="timeline-marker">01</div>
+                        <div class="timeline-content">
+                          <h4>Planning & Design</h4>
+                          <p>Outline structure and create wireframes.</p>
+                        </div>
+                      </div>
+                      <div class="timeline-item">
+                        <div class="timeline-marker">02</div>
+                        <div class="timeline-content">
+                          <h4>Development</h4>
+                          <p>Code and integrate features with modern technologies.</p>
+                        </div>
+                      </div>
+                      <div class="timeline-item">
+                        <div class="timeline-marker">03</div>
+                        <div class="timeline-content">
+                          <h4>Testing & Launch</h4>
+                          <p>Ensure quality and deploy the site live.</p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="benefits mt-4">
+                      <h4>Benefits</h4>
+                      <ul>
+                        <li>Responsive design</li>
+                        <li>Improved site performance</li>
+                        <li>Scalable solutions</li>
+                      </ul>
+                    </div>
+                  </div>
 
   </main>
 
- <footer id="footer" class="footer">
-
+  <footer id="footer" class="footer">
     <div class="container footer-top">
       <div class="row gy-4">
         <div class="col-lg-5 col-md-12 footer-about">
           <a href="index.html" class="logo d-flex align-items-center">
-<img src="assets/img/dtcpak logo.png" alt="Your Software House Logo" class="img-fluid" style="max-height: 100px; width: auto;">      </a>
-
+            <span class="sitename">Digital Transformation Company Pakistan</span>
           </a>
-          <p>We are a leading software house specializing in digital marketing, web development, graphic designing, and SEO services to help businesses succeed in the digital world.</p>
+          <p>Cras fermentum odio eu feugiat lide par naso tierra. Justo eget nada terra videa magna derita valies darta donna mare fermentum iaculis eu non diam phasellus.</p>
           <div class="social-links d-flex mt-4">
-            <a href=""><i class="bi bi-twitter-x"></i></a>
-            <a href=""><i class="bi bi-facebook"></i></a>
-            <a href=""><i class="bi bi-instagram"></i></a>
-            <a href=""><i class="bi bi-linkedin"></i></a>
+            <a href="#"><i class="bi bi-twitter-x"></i></a>
+            <a href="#"><i class="bi bi-facebook"></i></a>
+            <a href="#"><i class="bi bi-instagram"></i></a>
+            <a href="#"><i class="bi bi-linkedin"></i></a>
           </div>
         </div>
 
         <div class="col-lg-2 col-6 footer-links">
           <h4>Useful Links</h4>
           <ul>
-            <li><a href="#hero">Home</a></li>
-            <li><a href="#about">About us</a></li>
-            <li><a href="#services">Services</a></li>
-            <li><a href="#portfolio">Portfolio</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About us</a></li>
+            <li><a href="service-details.html">Services</a></li>
+            <li><a href="portfolio-details.html">Portfolio</a></li>
+            <li><a href="privacy-policy.html">Privacy Policy</a></li>
+            <li><a href="terms-and-conditions.html">Terms and Conditions</a></li>
           </ul>
         </div>
 
         <div class="col-lg-2 col-6 footer-links">
           <h4>Our Services</h4>
           <ul>
-            <li><a href="#services">Digital Marketing</a></li>
-            <li><a href="#services">Web Development</a></li>
-            <li><a href="#services">Graphic Designing</a></li>
-            <li><a href="#services">SEO Services</a></li>
+            <li><a href="service-details.html">Web Development</a></li>
+            <li><a href="service-details.html">Digital Marketing</a></li>
+            <li><a href="service-details.html">Graphic Designing</a></li>
+            <li><a href="service-details.html">SEO Services</a></li>
+            <li><a href="get-started.html">Consulting</a></li>
           </ul>
         </div>
 
         <div class="col-lg-3 col-md-12 footer-contact text-center text-md-start">
           <h4>Contact Us</h4>
-          <p>Innovista, Defence Central  Library</p>
-          <p>Sunset Boulevard, Phase 2 Extension Road</p>
-          <p>Karachi</p>
-          <p class="mt-4"><strong>Phone:</strong> <span>+92 303 2590468</span></p>
-          <p><strong>Email:</strong> <span>dtcpakistani@gmail.com</span></p>
+          <p>Office # 1, 2nd Floor, Al-Hafeez Executive, Main Boulevard Gulberg, Lahore, Pakistan</p>
+          <p><strong>Phone:</strong> <span>+92 300 1234567</span></p>
+          <p><strong>Email:</strong> <span>info@dtcpak.com</span></p>
         </div>
-
       </div>
     </div>
-
     <div class="container copyright text-center mt-4">
-      <p>© <span>Copyright</span> <strong class="px-1 sitename">DTC Pakistan</strong> <span>All Rights Reserved</span></p>
+      <p>© <span>Copyright</span> <strong class="px-1 sitename">Digital Transformation Company Pakistan</strong> <span>All Rights Reserved</span></p>
       <div class="credits">
-        <!-- Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> -->
+        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
       </div>
     </div>
-
   </footer>
-
-
-  <!-- Floating Contact Buttons -->
-  <div class="floating-contact-buttons">
-    <a href="https://wa.me/923031234567" target="_blank" title="Chat on WhatsApp"><i class="bi bi-whatsapp"></i></a>
-    <a href="tel:+923031234567" class="phone-btn" title="Call Us"><i class="bi bi-telephone"></i></a>
-  </div>
 
   <!-- Scroll Top -->
   <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
