--- a/index.html
+++ b/index.html
@@ -716,14 +716,14 @@
               <h2 class="text-center mb-4">Get in Touch</h2>
               <div d-flex class="d-flex justify-content-between"> 
                 <div>
-                        <h4>Email Address</h4>
-                <a href="mailto:dtcpakistani@gmail.com"><p>dtcpakistani@gmail.com</p></a>
+                  <a href="mailto:dtcpakistani@gmail.com"><img src="assets/img/gmail-icon.png" alt="gmail image" width="100" height="100"></a>
                 </div>
                 
                 <div>
-                  <h4>Phone Number</h4>
-                <a href="tel:+923333515910"><p>+92 333 3515910</p></a>
+                  <a href="tel:+923333515910"><img src="assets/img/phone-icon.png" alt="whatsapp image" width="100" height="100"></a>
                 </div>
+              </div>
+             
               </div>
             </div>
           </div>
