changes the intro gif

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           <div class="col-lg-5" data-aos="zoom-out">
             <div class="visual-content">
               <div class="fluid-shape">
-                            <img src="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExNG5kdjc1em9manRyZ21iN3lpcDg2Y2J6OWliejNhNHZyeGc5bDBraiZlcD12MV9naWZzX3NlYXJjaCZjdD1n/3o85xCVo1diTHyIoPC/giphy.webp" alt="Digital Solutions" width="450px"   class="img-fluid rounded-4">
+                            <img src="https://lottiefiles.com/free-animation/man-and-robot-with-computers-sitting-together-in-workplace-QnbODCGAFt" alt="Digital Solutions" width="450px"   class="img-fluid rounded-4">
 
               </div>
             </div>
