changed the intro gif again

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           <div class="col-lg-5" data-aos="zoom-out">
             <div class="visual-content">
               <div class="fluid-shape">
-                            <img src="https://lottiefiles.com/free-animation/man-and-robot-with-computers-sitting-together-in-workplace-QnbODCGAFt" alt="Digital Solutions" width="450px"   class="img-fluid rounded-4">
+                            <img src="https://blob.gifcities.org/gifcities/LS5H4SPHWQRVNGEXRMFFA7ZTARQM2VAW.gif" alt="Digital Solutions" width="450px"   class="img-fluid rounded-4">
 
               </div>
             </div>
