--- a/index.html
+++ b/index.html
@@ -716,11 +716,11 @@
               <h2 class="text-center mb-4">Get in Touch</h2>
               <div d-flex class="d-flex justify-content-between"> 
                 <div>
-                  <a href="mailto:dtcpakistani@gmail.com"><img src="assets/img/gmail-icon.png" alt="gmail image" width="100" height="100"></a>
+                  <a href="mailto:dtcpakistani@gmail.com"><img src="https://blob.gifcities.org/gifcities/SPY6IKZREO6HJ3KKJVCHSFO4RLNIJTJM.gif" alt="gmail image" width="100" height="100"></a>
                 </div>
                 
                 <div>
-                  <a href="tel:+923333515910"><img src="assets/img/phone-icon.png" alt="whatsapp image" width="100" height="100"></a>
+                  <a href="tel:+923333515910"><img src="https://blob.gifcities.org/gifcities/OTLYVFSPNOITIT25DFCM4L4L3RZSKQQ7.gif" alt="whatsapp image" width="100" height="100"></a>
                 </div>
               </div>
              
