--- a/contact.html
+++ b/contact.html
@@ -153,14 +153,14 @@
                 <div class="card-body text-center py-3">
                   <i class="bi bi-telephone mb-2" style="font-size: 1.5rem; color: var(--accent-color);"></i>
                   <h5 class="card-title mb-2">Call Us</h5>
-                  <p class="card-text small mb-0"><strong>Phone:</strong> <span>+92 303 2590468</span></p>
+                  <p class="card-text small mb-0"><strong>Phone:</strong> <span><a href="tel:+92 303 2590468">+92 303 2590468</a></span></p>
                 </div>
               </div>
               <div class="card" data-aos="fade-up" data-aos-delay="400">
                 <div class="card-body text-center py-3">
                   <i class="bi bi-envelope mb-2" style="font-size: 1.5rem; color: var(--accent-color);"></i>
                   <h5 class="card-title mb-2">Email Us</h5>
-                  <p class="card-text small mb-0"><strong>Email:</strong> <span>dtcpakistani@gmail.com</span></p>
+                  <p class="card-text small mb-0"><strong>Email:</strong> <span><a href="mailto:info@digitaltransformationcompanypakistan.com">dtcpakistani@gmail.com</a></span></p>
                 </div>
               </div>
             </div>
@@ -224,8 +224,8 @@
           <p>Innovista, Defence Central  Library</p>
           <p>Sunset Boulevard, Phase 2 Extension Road</p>
           <p>Karachi</p>
-          <p class="mt-4"><strong>Phone:</strong> <span>+92 303 2590468</span></p>
-          <p><strong>Email:</strong> <span>dtcpakistani@gmail.com</span></p>
+          <p class="mt-4"><strong>Phone:</strong> <span><a href="tel:+92 303 2590468">+92 303 2590468</a></span></p>
+          <p><strong>Email:</strong> <span><a href="mailto:info@digitaltransformationcompanypakistan.com">dtcpakistani@gmail.com</a></span></p>
         </div>
 
       </div>
