--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -200,8 +200,8 @@
           <p>Innovista, Defence Central  Library</p>
           <p>Sunset Boulevard, Phase 2 Extension Road</p>
           <p>Karachi</p>
-          <p class="mt-4"><strong>Phone:</strong> <span>+92 303 2590468</span></p>
-          <p><strong>Email:</strong> <span>dtcpakistani@gmail.com</span></p>
+       <p class="mt-4"><strong>Phone:</strong> <span><a href="tel:+92 303 2590468">+92 303 2590468</a></span></p>
+          <p><strong>Email:</strong> <span><a href="mailto:info@digitaltransformationcompanypakistan.com">dtcpakistani@gmail.com</a></span></p>
         </div>
 
       </div>
