--- a/web.html
+++ b/web.html
@@ -154,8 +154,8 @@
         <div class="col-lg-3 col-md-12 footer-contact text-center text-md-start">
           <h4>Contact Us</h4>
           <p>Office # 1, 2nd Floor, Al-Hafeez Executive, Main Boulevard Gulberg, Lahore, Pakistan</p>
-          <p><strong>Phone:</strong> <span>+92 300 1234567</span></p>
-          <p><strong>Email:</strong> <span>info@dtcpak.com</span></p>
+  <p class="mt-4"><strong>Phone:</strong> <span><a href="tel:+92 303 2590468">+92 303 2590468</a></span></p>
+          <p><strong>Email:</strong> <span><a href="mailto:info@digitaltransformationcompanypakistan.com">dtcpakistani@gmail.com</a></span></p>
         </div>
       </div>
     </div>
